--- a/Angular/src/styles.scss
+++ b/Angular/src/styles.scss
@@ -28,7 +28,7 @@
 
 body {
   font-family: 'Inter', sans-serif;
-  background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+//   background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
   min-height: 100vh;
   color: var(--text-dark);
 }
@@ -145,6 +145,10 @@ body {
 .navbar-brand {
   font-weight: 700;
   font-size: 1.5rem;
+}
+
+.navbar-header{
+    margin-bottom: 3em;
 }
 
 /* Loading spinner */
