--- a/Angular/src/app/navbar/navbar.component.html
+++ b/Angular/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <header class="navbar-header">
-    <nav class="navbar navbar-expand-lg navbar-custom">
+    <nav class="navbar navbar-expand-md navbar-custom">
         <div class="container-fluid px-4">
           <a href="/" [routerLink]="'.'" class="navbar-brand brand-logo">zForge</a>
           <button class="navbar-toggler" type="button" (click)="isMenuCollapsed = !isMenuCollapsed"data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
