--- a/Angular/src/styles.scss
+++ b/Angular/src/styles.scss
@@ -199,3 +199,11 @@ body {
     margin-bottom: 10px;
   }
 }
+
+
+.fs-7{
+  font-size: 0.75rem !important;
+}
+.fs-8{
+  font-size: 0.65rem !important;
+}
