--- a/Angular/src/app/app.html
+++ b/Angular/src/app/app.html
@@ -100,6 +100,14 @@
         </div>
       </div>
     </div>
+
+    <div class="mt-4 row">
+      <div class="col">
+        <div class="d-flex justify-content-center align-items-center">
+          <span class="text-muted fs-6">Price data by CoinGecko</span>
+        </div>
+      </div>
+    </div>
   </div>
 </main>
 
