--- a/Angular/src/app/components/pools/pools.component.html
+++ b/Angular/src/app/components/pools/pools.component.html
@@ -270,10 +270,10 @@
           <div class="col-md-4">
             <div class="dex-card card text-center h-100">
               <div class="card-body">
-                <h5 class="text-primary">Uniswap V3</h5>
-                <p class="text-muted">Trade PT/YT tokens on Uniswap V3 with concentrated liquidity</p>
+                <h5 class="text-primary">Core Swap</h5>
+                <p class="text-muted">Trade PT/YT tokens on Core Swap</p>
                 <button class="btn btn-outline-primary">
-                  Open Uniswap
+                  Open Core Swap
                   <i class="bi bi-box-arrow-up-right ms-1"></i>
                 </button>
               </div>
@@ -282,10 +282,10 @@
           <div class="col-md-4">
             <div class="dex-card card text-center h-100">
               <div class="card-body">
-                <h5 class="text-success">SushiSwap</h5>
-                <p class="text-muted">Access PT/YT pools on SushiSwap with additional rewards</p>
+                <h5 class="text-success">zSwap</h5>
+                <p class="text-muted">Access PT/YT pools on zSwap  with concentrated liquidity & additional rewards</p>
                 <button class="btn btn-outline-success">
-                  Open SushiSwap
+                  Open zSwap
                   <i class="bi bi-box-arrow-up-right ms-1"></i>
                 </button>
               </div>
