--- a/Angular/src/app/components/ptyt/ptyt.component.html
+++ b/Angular/src/app/components/ptyt/ptyt.component.html
@@ -175,12 +175,12 @@
                     <div class="btn-group">
                       <button class="btn btn-sm btn-outline-primary" 
                               >
-                        Select PT
+                        More
                       </button>
-                      <button class="btn btn-sm btn-outline-warning" 
+                      <!-- <button class="btn btn-sm btn-outline-warning" 
                               >
                         Select YT
-                      </button>
+                      </button> -->
                     </div>
                   </td>
                 </tr>
